Added day/night via button press with ambient lighting

--- a/gl-maze-demo/Base.lproj/Main.storyboard
+++ b/gl-maze-demo/Base.lproj/Main.storyboard
@@ -16,18 +16,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="xcJ-FY-Cpu">
-                                <rect key="frame" x="85" y="433" width="244" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mK3-M2-8FC">
+                                <rect key="frame" x="20" y="83" width="106" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Fog"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Day/Night"/>
                                 <connections>
-                                    <action selector="toggleWith_sender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uwa-of-diz"/>
+                                    <action selector="toggleDayWith_sender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aX1-p3-SWR"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oA9-1v-COG">
+                                <rect key="frame" x="20" y="122" width="106" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Fog"/>
+                                <connections>
+                                    <action selector="toggleFogWith_sender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="d9J-J7-HB4"/>
                                 </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="dayNightButton" destination="mK3-M2-8FC" id="PIn-UV-yQ0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
